--- a/render.yaml
+++ b/render.yaml
@@ -1,26 +1,24 @@
 services:
   - type: web
     name: laravel-web-ejemplo
-    env: php
-    plan: free
+    runtime: php
     buildCommand: |
-      curl -sS https://getcomposer.org/installer | php
-      php composer.phar install --no-dev --optimize-autoloader
-      npm install
-      npm run build
-      php artisan key:generate
-      php artisan migrate --force
-    startCommand: php -S 0.0.0.0:10000 -t public
+      composer install --no-dev --optimize-autoloader
+      npm ci && npm run build
+      php artisan config:cache
+      php artisan route:cache
+      php artisan view:cache
+    startCommand: php artisan serve --host 0.0.0.0 --port $PORT
     envVars:
       - key: APP_ENV
         value: production
-      - key: APP_DEBUG
-        value: "true"
       - key: APP_KEY
-        value: "base64:xWkesB/Nnycjnzb/dAQFqhLIpldfqF16XNQR8ZOrMJU="
-      - key: APP_URL
-        value: "https://laravel-web-ejemplo.onrender.com"
+        generateValue: true
       - key: DB_CONNECTION
         value: sqlite
-      - key: DB_DATABASE
-        value: /opt/render/project/src/database/database.sqlite
+      - key: CACHE_STORE
+        value: file
+      - key: QUEUE_CONNECTION
+        value: sync
+      - key: SESSION_DRIVER
+        value: file
