--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,7 +2,12 @@
 nixPkgs = ["php82", "php82Extensions.sqlite3"]
 
 [phases.build]
-cmds = ["composer install --no-dev --optimize-autoloader"]
+cmds = [
+  "composer install --no-dev --optimize-autoloader",
+  "mkdir -p database",
+  "touch database/database.sqlite",
+  "chmod -R 775 database"
+]
 
 [start]
 cmd = "php artisan migrate --force && php artisan serve --host=0.0.0.0 --port=$PORT"
