--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -4,10 +4,10 @@ nixPkgs = ["php82", "php82Extensions.sqlite3"]
 [phases.build]
 cmds = [
   "composer install --no-dev --optimize-autoloader",
-  "mkdir -p database",
+  "mkdir -p database storage/framework/sessions storage/framework/views storage/framework/cache bootstrap/cache",
   "touch database/database.sqlite",
-  "chmod -R 775 database"
+  "chmod -R 775 database storage bootstrap/cache"
 ]
 
 [start]
-cmd = "php artisan migrate --force && php artisan serve --host=0.0.0.0 --port=$PORT"
+cmd = "php artisan migrate --force && php artisan serve --host=0.0.0.0 --port=${PORT:-8080}"
