--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,12 +2,13 @@
 nixPkgs = ["php82", "php82Extensions.sqlite3"]
 
 [phases.build]
-cmds = [
-  "composer install --no-dev --optimize-autoloader",
-  "mkdir -p database storage/framework/sessions storage/framework/views storage/framework/cache bootstrap/cache",
-  "touch database/database.sqlite",
-  "chmod -R 775 database storage bootstrap/cache"
-]
+cmds = ["composer install --no-dev --optimize-autoloader"]
 
 [start]
-cmd = "php artisan migrate --force && php artisan serve --host=0.0.0.0 --port=${PORT:-8080}"
+cmd = "php artisan migrate --force && php artisan serve --host=0.0.0.0 --port=$PORT"
+```
+
+### 4. **Actualiza tu `.gitignore`** - Asegúrate que incluya:
+```
+/database/database.sqlite
+/database/database.sqlite-journal
