--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,13 +2,9 @@
 nixPkgs = ["php82", "php82Extensions.sqlite3"]
 
 [phases.build]
-cmds = ["composer install --no-dev --optimize-autoloader"]
+cmds = [
+  "composer install --no-dev --optimize-autoloader"
+]
 
 [start]
-cmd = "php artisan migrate --force && php artisan serve --host=0.0.0.0 --port=$PORT"
-```
-
-### 4. **Actualiza tu `.gitignore`** - Asegúrate que incluya:
-```
-/database/database.sqlite
-/database/database.sqlite-journal
+cmd = "touch /app/database/database.sqlite && chmod -R 775 /app/database && php artisan migrate --force && php artisan serve --host=0.0.0.0 --port=${PORT:-8080}"
