--- a/render.yaml
+++ b/render.yaml
@@ -1,17 +1,8 @@
 services:
   - type: web
-    name: web-ejemplo
-    env: php
-    buildCommand: |
-      composer install --no-dev --optimize-autoloader
-      php artisan config:cache
-      php artisan route:cache
-      php artisan view:cache
-    startCommand: |
-      touch /opt/render/project/src/database/database.sqlite
-      chmod 664 /opt/render/project/src/database/database.sqlite
-      php artisan migrate --force
-      php artisan serve --host=0.0.0.0 --port=$PORT
+    name: laravel-web-ejemplo
+    env: docker
+    dockerfilePath: ./Dockerfile
     healthCheckPath: /
     envVars:
       - key: APP_KEY
@@ -26,7 +17,3 @@ services:
         value: database
       - key: CACHE_STORE
         value: database
-      - key: QUEUE_CONNECTION
-        value: database
-      - key: LOG_CHANNEL
-        value: stack
