--- a/render.yaml
+++ b/render.yaml
@@ -23,3 +23,5 @@ services:
         value: database
       - key: CACHE_STORE
         value: database
+      - key: DB_SSLMODE
+        value: require  
